--- a/src/index.css
+++ b/src/index.css
@@ -174,3 +174,33 @@ ul{
 .forecast-card-temperature-min{
   opacity: 50%;
 }
+
+form {
+  display: flex;
+  border-radius: 5vmin;
+  padding: 10px;
+  background: #C5C5C5;
+  opacity: 50%;
+}
+
+input[type="text"] {
+  flex-grow: 2;
+  border: none;
+  background: #C5C5C5;
+  font-size: 3vmin;
+}
+
+button {
+  border: none;
+  background: #E2DED0;
+  padding: 5px;
+  border-radius: 50%;
+}
+
+input:focus {
+  outline: none;
+}
+
+#search-button {
+  width: 3vmin;
+}
